# znotify

./: Cargo.toml  EXAMPLES.md  RESEARCH-ZELLIJ-PLUGIN-CAPABILITIES.md  Taskfile.yaml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
scripts/: setup-claude-hooks.sh
src/: lib.rs
