[package]
name = "zellij-notify"
version = "0.1.51"
edition = "2021"
authors = ["Yuri"]
description = "A Zellij plugin that adds status emojis to tabs and auto-cleans them on focus"
license = "MIT"
keywords = ["zellij", "plugin", "terminal", "wasm"]
categories = ["command-line-utilities"]
# repository = "https://github.com/yourusername/zellij-notify"  # Uncomment and update when published

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.41.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
